projects for mentor

--- a/mentor1/index.html
+++ b/mentor1/index.html
@@ -27,7 +27,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Michalis Ligopsychakis</a>.
+      Coded by <a href="https://www.linkedin.com/in/michalis-ligopsychakis-517621164/" target="_blank">Michalis Ligopsychakis</a>.
     </p>
   </footer>
 
