--- a/countries/index.html
+++ b/countries/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countries</title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <title>Frontend Mentor | Rest Countries API with color theme switcher</title>
 </head>
 <body>
     <nav>
