--- a/short_url/index.html
+++ b/short_url/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+  <title>Shortly URL shortening API Challenge</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.css" type="text/css">
 </head>
 
 <body>
-  <nav>
+  <nav class="desktop-nav">
     <ul>
       <li><img src="./images/logo.svg" alt="logo"></li>
       <li><a href="#">Features</a></li>
@@ -18,34 +18,49 @@
       <li><a href="#">Resources</a></li>
       <li><a href="#">Login</a></li>
       <li><a href="#">Sign Up</a></li>
+      <li><i class="fas fa-bars fa-2x"></i></li>
+    </ul>
+  </nav>
+  <nav class="mobile-nav">
+    <ul>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Resources</a></li>
+      <hr>
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Sign Up</a></li>
     </ul>
   </nav>
 
   <header> 
       <div>
-        <h1>More than just shorter links</h1>
+        <h1>More than just<br> shorter links</h1>
         <p>Build your brand’s recognition and get detailed insights 
           on how your links are performing.</p>
         <button>Get Started</button>
       </div>
-      <div></div>
+      <figure>
+        <img src="./images/illustration-working.svg" alt="Illustration working">
+      </figure>
   </header>
 
   <main>
     <section class="short-links">
       <form>
         <input type="text" placeholder="Shorten a link here..">
-        <button type="submit">Shorten It!</button>
+        <p><em>Please add a valid link..</em></p>
+        <button>Shorten It!</button>
       </form>
       <div>
-
       </div>
     </section>
 
     <section class="statistics">
-      <h2>Advanced Statistics</h2>
-      <p>Track how your links are performing across the web with our 
+      <div class="advanced-statistics">
+        <h2>Advanced Statistics</h2>
+        <p>Track how your links are performing across the web with our 
         advanced statistics dashboard.</p> 
+      </div>
 
       <div class="choices">
         <div class="choice">
@@ -68,6 +83,7 @@
           <p>Improve brand awareness and content discoverability through customizable 
             links, supercharging audience engagement.</p>
         </div>
+        <div class="cyan-line"></div>
       </div>
     </section>
 
@@ -79,25 +95,25 @@
 
   <footer>
     <div>
-      <img src="./images/logo.svg" alt="logo">
+      <h1 class="logo">Shortly</h1>
     </div>
-    <div>
+    <session>
       <h4>Features</h4>
       <ul>
         <li><a href="#">Link Shortening</a></li>
         <li><a href="#">Branded Links</a></li>
         <li><a href="#">Analytics</a></li>
       </ul>
-    </div>
-    <div>
+    </session>
+    <session>
       <h4>Resources</h4>
       <ul>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Developers</a></li>
         <li><a href="#">Support</a></li>
       </ul>
-    </div>
-    <div>
+    </session>
+    <session>
       <h4>Company</h4>
       <ul>
         <li><a href="#">About</a></li>
@@ -105,12 +121,12 @@
         <li><a href="#">Careers</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-    </div>
+    </session>
     <div>
-      <img src="./images/icon-facebook.svg" alt="facebook">
-      <img src="./images/icon-twitter.svg" alt="twitter">
-      <img src="./images/icon-pinterest.svg" alt="pinterest">
-      <img src="./images/icon-instagram.svg" alt="instagram">
+      <i class="fab fa-facebook-square fa-2x"></i>
+      <i class="fab fa-twitter fa-2x"></i>
+      <i class="fab fa-pinterest fa-2x"></i>
+      <i class="fab fa-instagram fa-2x"></i>
     </div>
   </footer>
 
@@ -118,5 +134,9 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.linkedin.com/in/michalis-ligopsychakis-517621164/" target="_blank">Ligopsychakis Michalis</a>.
   </div>
+
+  <!-- font awesome icons -->
+  <script src="https://kit.fontawesome.com/a35f8701c8.js" crossorigin="anonymous"></script>
+  <script src="./JavaScript/app.js" type="module"></script>
 </body>
 </html>
