--- a/short_url/index.html
+++ b/short_url/index.html
@@ -49,7 +49,7 @@
       <form>
         <input type="text" placeholder="Shorten a link here..">
         <p><em>Please add a valid link..</em></p>
-        <button type="button">Shorten It!!</button>
+        <button type="button">Shorten It!</button>
       </form>
       <div>
       </div>
