--- a/my_google_map/index.html
+++ b/my_google_map/index.html
@@ -16,8 +16,10 @@
             overflow-x: hidden;
         }
         #map{
-            height: 100vh;
-            width: 100vw;
+            height: 996.6px;
+            width: 1000px;
+            border-radius: 50%;
+            margin: auto;
         }
 
         .container{
@@ -58,6 +60,21 @@
                 width: 72px;
                 height: 72px;
                 opacity: 0;
+            }
+        }
+
+        @media all and (max-width: 1005px){
+            #map{
+                height: 498.3px;
+                width: 500px;
+            }
+        }
+
+        @media all and (max-width: 505px){
+            #map{
+                height: 85vh;
+                width: 100vw;
+                border-radius: 0;
             }
         }
     </style>
