--- a/short_url/index.html
+++ b/short_url/index.html
@@ -47,9 +47,9 @@
   <main>
     <section class="short-links">
       <form>
-        <input type="text" placeholder="Shorten a link here..">
+        <input type="text" placeholder="Shorten a link here.." />
         <p><em>Please add a valid link..</em></p>
-        <button type="button">Shorten It!</button>
+        <button>Shorten It!</button>
       </form>
       <div>
       </div>
